syntax = "proto3";

package v1;

option go_package = ".;pb";

import "follow_message.proto";

message RequestListFollow{
    FollowListType follow_type = 1;
    int64 follower = 2;
    int64 followee = 3;
}

message ResponseListFollow{
    repeated Follow Follows = 1;
}

message RequestFollow{
    int64 followee = 1;
}

message ResponseFollow{}

service FollowService{
    // ToggleFollow 
    rpc ToggleFollow(RequestFollow) returns (ResponseFollow);
    // List
    rpc ListFollow(RequestListFollow) returns (ResponseListFollow);
}